# ygg

./: .gitignore  README.md  app.py  config.yaml  main.py  pyproject.toml
.config/: ruff.toml
assets/self/: ygg_db.duck
dev/: config.yaml  ddbt.ipynb  duck_lake_setup.py  x.md
dev/data/: metadata.ducklake
dev/docker/: docker-compose.yml
dev/skadi/: dspy_cli.py  helper.py  online_document_ingestor.py
infra/: docker-compose.yml
ygg/: config.py  contract.py  data_contract_loader.py  data_models.py  enums.py  release.py
ygg/app/: __init__.py  helper.py
ygg/assets/constraints/: naming-conventions.yaml
ygg/assets/entities/: release.yaml
ygg/assets/infra/: docker-compose.yml
ygg/assets/ygg_schemas/: config.yaml  contract.yaml  schema.yaml  schema_property.yaml  servers.yaml
ygg/core/: __init__.py  app.py  base_models.py  commons.py  constants.py  contract.py  contract_config.py  contract_schema.py  data_contract_loader.py  data_model.py  dynamic_models_factory.py  dynamic_odcs_models_factory.py  dynamic_ygg_models_factory.py  enums.py  helper.py  model_parser.py  models.py  odcs_fields.py  polyglot_contract.py  release_data_contract.py  server.py  service_factory.py  shared_model_mixin.py  sla.py  ygg_factory.py  ygg_repositories_manager.py
ygg/helpers/: artifacts_setup.py  data_types.py  duck_db.py  duck_lake_db_tools.py  duckdb_helper.py  duckdb_tools.py  enums.py  logical_data_models.py  logical_model_helper.py  metadata_catalog.py  object_storage.py  odcs_duckdb_tools.py  odcs_physical_model.py  physical_db_helpers.py  physical_model.py  release.py  s3_helper.py  shared_model_mixin.py  ygg_contract_schema.py  ygg_models.py  ygg_physical_model.py
ygg/model/odcs/: __init__.py  data_quality.py  fundamentals.py  odcs_commons.py  (+8 more)
ygg/polyglot/: duckdb_connector.py  ducklake_connector.py  helper.py  polyglot.py  postgres_db_tools.py  quack_connector.py  quack_meta_class.py  quack_service.py  quack_tools.py
ygg/services/: contract_management.py  contract_manager.py  data_contract_manager_service.py  data_contract_service_manager.py  physical_model_tools.py  ygg_service.py
ygg/skadi/: dspy_cli.py  helper.py  online_document_ingestor.py
ygg/utils/: __init__.py  commons.py  custom_decorators.py  files_utils.py  yaml_utils.py  ygg_logs.py
(+21 files in other folders)
